// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NewsList matches snapshot 1`] = `
<DocumentFragment>
  <ul
    class="newsList"
  >
    <li
      class="newsItem"
    >
      <article
        class="newsCard listItem"
      >
        <a
          aria-hidden="true"
          class="imageContainer"
          href="/news/articles/mock-news-article"
          style="background-image: url(https://local-host-test-nice-org.com/f/243782/724x483/ef045348c1/kidney-transplant.jpg/m/868x0/filters:quality%2880%29);"
          tabindex="-1"
        >
           
        </a>
        <div>
          <h3
            class="heading"
          >
            <a
              href="/news/articles/mock-news-article"
            >
              Article 1 name
            </a>
          </h3>
          <p />
          <footer>
            <div>
              <span
                class="tag tag--outline"
                data-component="tag"
              >
                News
              </span>
              <time
                class="date"
                datetime="2022-06-16 00:00"
              >
                16 June 2022
              </time>
            </div>
          </footer>
        </div>
      </article>
    </li>
    <li
      class="newsItem"
    >
      <article
        class="newsCard listItem"
      >
        <a
          aria-hidden="true"
          class="imageContainer"
          href="/news/articles/mock-news-article"
          style="background-image: url(https://local-host-test-nice-org.com/f/243782/724x483/ef045348c1/kidney-transplant.jpg/m/868x0/filters:quality%2880%29);"
          tabindex="-1"
        >
           
        </a>
        <div>
          <h3
            class="heading"
          >
            <a
              href="/news/articles/mock-news-article"
            >
              Article 2 name
            </a>
          </h3>
          <p />
          <footer>
            <div>
              <span
                class="tag tag--outline"
                data-component="tag"
              >
                News
              </span>
              <time
                class="date"
                datetime="2022-06-16 00:00"
              >
                16 June 2022
              </time>
            </div>
          </footer>
        </div>
      </article>
    </li>
    <li
      class="newsItem"
    >
      <article
        class="newsCard listItem"
      >
        <a
          aria-hidden="true"
          class="imageContainer"
          href="/news/articles/mock-news-article"
          style="background-image: url(https://local-host-test-nice-org.com/f/243782/724x483/ef045348c1/kidney-transplant.jpg/m/868x0/filters:quality%2880%29);"
          tabindex="-1"
        >
           
        </a>
        <div>
          <h3
            class="heading"
          >
            <a
              href="/news/articles/mock-news-article"
            >
              Article 3 name
            </a>
          </h3>
          <p />
          <footer>
            <div>
              <span
                class="tag tag--outline"
                data-component="tag"
              >
                News
              </span>
              <time
                class="date"
                datetime="2022-06-16 00:00"
              >
                16 June 2022
              </time>
            </div>
          </footer>
        </div>
      </article>
    </li>
  </ul>
</DocumentFragment>
`;

exports[`NewsList should match the snapshot if showImage is false 1`] = `
<DocumentFragment>
  <ul
    class="newsList"
  >
    <li
      class="newsItem"
    >
      <article
        class="newsCard listItem"
      >
        <div>
          <h3
            class="heading"
          >
            <a
              href="/news/articles/mock-news-article"
            >
              Article 1 name
            </a>
          </h3>
          <p />
          <footer>
            <div>
              <span
                class="tag tag--outline"
                data-component="tag"
              >
                News
              </span>
              <time
                class="date"
                datetime="2022-06-16 00:00"
              >
                16 June 2022
              </time>
            </div>
          </footer>
        </div>
      </article>
    </li>
    <li
      class="newsItem"
    >
      <article
        class="newsCard listItem"
      >
        <div>
          <h3
            class="heading"
          >
            <a
              href="/news/articles/mock-news-article"
            >
              Article 2 name
            </a>
          </h3>
          <p />
          <footer>
            <div>
              <span
                class="tag tag--outline"
                data-component="tag"
              >
                News
              </span>
              <time
                class="date"
                datetime="2022-06-16 00:00"
              >
                16 June 2022
              </time>
            </div>
          </footer>
        </div>
      </article>
    </li>
    <li
      class="newsItem"
    >
      <article
        class="newsCard listItem"
      >
        <div>
          <h3
            class="heading"
          >
            <a
              href="/news/articles/mock-news-article"
            >
              Article 3 name
            </a>
          </h3>
          <p />
          <footer>
            <div>
              <span
                class="tag tag--outline"
                data-component="tag"
              >
                News
              </span>
              <time
                class="date"
                datetime="2022-06-16 00:00"
              >
                16 June 2022
              </time>
            </div>
          </footer>
        </div>
      </article>
    </li>
  </ul>
</DocumentFragment>
`;
